# torch-b0-synth

./: README.md  setup.cfg
b0/: synth.py  utils.py
conda/: synth-cpu.yml
demo/: samseg_talairach.mgz  synth_from_samseg.ipynb
scripts/: synth_from_aseg.py  synth_from_samseg.py
