[metadata]
name = torch-b0-synth
author = Yael Balbastre
author_email = yael.balbastre@gmail.com
description = Synthesize B0 fields using a forward model of MR susceptibilities
long_description = file:README.md
platforms = OS Independent
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Medical Science Apps.
project_urls =
    Source Code=https://github.com/balbasty/torch-b0-synth


[options]
python_requires = >= 3.6
install_requires = torch>=1.8
